--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
@@ -1,6 +1,8 @@
 <div class="marketing-component">
   <div class="header">
-    <app-slider></app-slider>
+    <div class="container">
+      <app-slider></app-slider>
+    </div>
     <!-- <div class="image-overlay"> -->
       <!-- <div class="title">Grupo Flores</div> -->
       <!-- <div class="subtitle">Compra calidad, no cantidad!</div> -->
@@ -9,13 +11,13 @@
   <section id="mision" class="col-lg-12 col-md-6">
     <div class="text-section">
    <br>
-   <h3>Nuestra Misión</h3>
+   <h3>Misión</h3>
    <p>Somos una empresa unida (Grupo Flores), con 30 años de trabajo en la
      elaboración de blocs y tabicón para construcción. Nuestro producto beneficia a
      las familias con ánimos de construir para realizar sus sueños de tener un hogar
      propio.
    
-     Nuestra empresa da un bloque de calidad firme y seguro, ya que vemos por la
+     La empresa da un bloque de calidad firme y seguro, ya que vemos por la
      seguridad de nuestros clientes y el gusto por preferirnos. Para ello, utilizamos
      materias primas de primera calidad que nos diferencia de la demás
      competencia</p>
@@ -25,7 +27,7 @@
   <section id="vision" class="col-lg-12 col-md-6">
     <div class="text-section">
       <br>
-      <h3>Nuestra Vision</h3>
+      <h3>Vision</h3>
       <p>Buscamos ser la primera surtidora de bloques reconocida por nuestros clientes dentro
         del Estado de México. Llegaremos a nuestra meta por medio de nuestra lealtad y
         confianza de nuestros clientes, así como nuestro compromiso por la mejora constante y
@@ -34,7 +36,7 @@
   </section> 
   <hr class="separator">
   <section>
-    <h3>VALORES</h3>
+    <h3>Valores</h3>
     <div class="values-train"> 
       <div class="train">
         <div class="train-item">
