--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.scss
@@ -1,15 +1,5 @@
 .marketing-component {
-  // background: #DBDBDB;  /* fallback for old browsers */
-  // // background: -webkit-linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari   5.1-6 */
-  // // background: linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  // background-color: #693cac;
-// // // // // // // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='40' viewBox='0 0 50 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23a783dd' fill-opacity='0.09'%3E%3Cpath d='M40 10L36.67 0h-2.11l3.33 10H20l-2.28 6.84L12.11 0H10l6.67 20H10l-2.28 6.84L2.11 10 5.44 0h-2.1L0 10l6.67 20-3.34 10h2.11l2.28-6.84L10 40h20l2.28-6.84L34.56 40h2.1l-3.33-10H40l2.28-6.84L47.89 40H50l-6.67-20L50 0h-2.1l-5.62 16.84L40 10zm1.23 10l-2.28-6.84L34 28h4.56l2.67-8zm-10.67 8l-2-6h-9.12l2 6h9.12zm-12.84-4.84L12.77 38h15.79l2.67-8H20l-2.28-6.84zM18.77 20H30l2.28 6.84L37.23 12H21.44l-2.67 8zm-7.33 2H16l-4.95 14.84L8.77 30l2.67-8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-// 
-background-color: #694d7a;
-background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox='0 0 44 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 12v-2L0 0v10l4 2h16zm18 0l4-2V0L22 10v2h16zM20 0v8L4 0h16zm18 0L22 8V0h16z' fill='%23491d8b' fill-opacity='0.2' fill-rule='evenodd'/%3E%3C/svg%3E");
-
-
+  background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   position: relative;
 }
 
@@ -35,7 +25,6 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
   justify-content: flex-end;
   padding: 20px;
   box-sizing: border-box;
-  /* background-color: rgba(153, 140, 140, 0.7); */
   color: #fff;
 }
 
@@ -43,58 +32,40 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 5px;
+  text-align: justify;
+  text-transform: capitalize;
 }
 
 .subtitle {
   font-size: 18px;
+  text-align: justify;
 }
 
-/*  secciones mision y vision */
-#mision h3{
+#mision h3, #vision h3 {
   text-align: center;
   font-size: 3rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: oblique;
-  font-size-adjust: initial;
-  color: #a8abaf ;
+  color: #424242;
+  text-transform: capitalize;
 }
 
-#mision{
-  text-align: center;
+#mision, #vision {
+  text-align: justify;
   font-size: 1.2rem;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 700;
-
-}
-#vision h3{
-  text-align: center;
-  font-size: 3rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: oblique;
-  font-size-adjust: initial;
-  color: #a8abaf ;
 }
 
-#vision{
-  text-align: center;
-  font-size: 1.2rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, 
-sans-serif;
-font-weight: 700;
-}
 hr {
-  color: #06f85f;
-  
+  color: #424242;
 }
 
-/* Agrega más estilos según tus preferencias */
-/* cajitas Valores */
 .values-train {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
-  /* background-color: #f0f0f0; */
   border-radius: 10px;
   overflow: hidden;
 }
@@ -106,7 +77,7 @@ hr {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, #738294, #74bdd3, #80898a); /* Degradado en tonos azules */
+  background-image:  linear-gradient(90deg, #f9613b 0%, #260051 100%);
   margin: 0 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -132,17 +103,17 @@ hr {
   display: block;
 }
 
-h3{
+h3 {
   text-align: center;
   font-size: 2.5rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: oblique;
-  font-size-adjust: initial;
-  color: #a8abaf ;
+  color: #424242;;
   padding-top: 2px;
+  text-transform: capitalize;
 }
 
-/* mas estilos  */   
+/* Estilos para íconos */
 .icon-container {
   display: flex;
   justify-content: center;
@@ -154,7 +125,7 @@ h3{
 
 .icon {
   font-size: 48px;
-  margin:  15px; /* Espacio horizontal entre íconos */
+  margin: 15px;
   transform: scale(1);
   transition: transform 0.3s ease;
 }
