--- a/fronted/src/app/components/Productos/preview-producto/preview-producto.component.html
+++ b/fronted/src/app/components/Productos/preview-producto/preview-producto.component.html
@@ -7,7 +7,9 @@
     <div class="row">
         <div class="col-md-5">
             <div class="card">
-                <img [src]="'http://localhost:3000/' + (producto?.imagePath || '')" class="img-fluid product-image">
+                <img [src]="getImageUrl(producto?.imagePath)" class="img-fluid product-image">
+
+                <!-- <img [src]="'http://localhost:3000/' + (producto?.imagePath || '')" class="img-fluid product-image"> -->
             </div>
         </div>
         <div class="col-md-7">
