--- a/fronted/src/app/components/Tienda/articulos/articulos.component.html
+++ b/fronted/src/app/components/Tienda/articulos/articulos.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12 mb-4" *ngFor="let producto of productos">
       <div class="card card-Produc custom-card h-80">
-        <img [src]="'http://localhost:3000/' + producto.imagePath" class="card-img-top w-80" style="height: 200px;">
+        <img [src]="getImageUrl(producto?.imagePath)" class="card-img-top w-80" style="height: 200px;">
         <div class="card-header">
           <ng-container *ngIf="producto.title">{{ producto.title }}</ng-container>
         </div>
