--- a/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
+++ b/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
@@ -4,7 +4,8 @@
     <!-- Vista del carrito con productos -->
     <div *ngFor="let producto of productosEnCarrito" class="row mb-3">
       <div class="col-3">
-        <img [src]="'http://localhost:3000/' + producto.imagePath" class="card-img-top w-100">
+        <img [src]="getImageUrl(producto?.imagePath)" class="card-img-top w-100">
+
       </div>
       <div class="col-6">
         <h4 class="producto-titulo">{{ producto.title }}</h4>
