--- a/fronted/src/app/components/Compartidos/bottom-bar/bottom-bar.component.html
+++ b/fronted/src/app/components/Compartidos/bottom-bar/bottom-bar.component.html
@@ -1,7 +1,7 @@
 <div class="bottom-bar">   
   <div class="company-info">
    <p>Somos una empresa unida, con 30 años de trabajo en la
-     elaboración de blocs y tabicón para construcción.</p>
+     elaboración de blocks y tabicón para construcción.</p>
     <div class="contact-info">
       <div class="contact-numbers">
         <span>Teléfono: (+52) 56 33 69 37 98</span><br>
