--- a/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
+++ b/fronted/src/app/components/Compartidos/pagina-web-inicial/pagina-web-inicial.component.html
@@ -27,7 +27,7 @@
   <section id="vision" class="col-lg-12 col-md-6">
     <div class="text-section">
       <br>
-      <h3>Vision</h3>
+      <h3>Visión</h3>
       <p>Buscamos ser la primera surtidora de bloques reconocida por nuestros clientes dentro
         del Estado de México. Llegaremos a nuestra meta por medio de nuestra lealtad y
         confianza de nuestros clientes, así como nuestro compromiso por la mejora constante y
@@ -42,7 +42,7 @@
         <div class="train-item">
           <div class="value-item">
             <h5>Honestidad</h5>
-            <p class="description">La empresa de Grupo Flores se ha colocado en ser honesta puesto que nuestros 
+            <p class="description">La empresa de Grupo Flores se ha colocado en ser honesta, puesto que nuestros 
     clientes nunca se han quejado por ninguna pieza faltante o que les quedemos sin dar su material.</p>
           </div>
         </div>
