--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -104,7 +104,7 @@
               </div>
               <mat-divider></mat-divider>
               <!-- Submenú "Información Personal" -->
-              <button mat-menu-item routerLink="/informacion-personal">Información Personal</button>
+              <button mat-menu-item routerLink="/dashboard/Perfil/User">Información Personal</button>
               <!-- Submenú "Datos de la Cuenta" -->
               <button mat-menu-item routerLink="/datos-cuenta">Datos de la Cuenta</button>
               <!-- Submenú "Seguridad" -->
